# agent_experimental_builds

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: .Dockerfile  devcontainer.json
01-foundation/: 02_rag.ipynb  git_reader_scratch.ipynb  homework.ipynb  rag_build.ipynb  rag_test.ipynb  scratch.py  streaming_structured_scratch.ipynb  structured_output_doc_rag.ipynb  structured_output_scratch.ipynb  test.ipynb
03-agentic-rag/: 03_homework_wikipedia.ipynb  agent_search_tools.py  agentic_rag_scratch.ipynb  agentic_tool_class.ipynb  agentic_toolcall.ipynb  beyond_rag.ipynb  frameworks_organization.ipynb  frameworks_toyaikit.ipynb  pydantic_ai.ipynb  search_tools.py
documentation-agent/: frontend_app.py  main.py  pyproject.toml  tools.py
documentation-agent/tests/: test_agent.py  test_judge.py
documentation_agent/: doc_agent.py  frontend_app.py  main.py  models.py  pyproject.toml  search_tools.py
documentation_agent/notebooks/: logfire_queries.ipynb
documentation_agent/tests/: Makefile  conftest.py  judge.py
documentation_agent/trace_replay/: converter.py  test_converter.py
elastic_search_wiki/: agent.py
mcp_postgres/: main.py  mcp_test.ipynb  pyproject.toml  search_tools.py  tools_outputs.json
mcp_postgres/tests/: test.py
mini_projects_exp/: elastic_search_wiki.py  llm_client.py
pdf_extraction/: extraction-clean.ipynb  main.py  page_extract.py  pdf_extraction_first.ipynb  pricing.py  pyproject.toml  query_extracts.ipynb  rag.py
pdf_extraction/db/: math_book_2.sqlite  math_book_2.sqlite-shm
pdf_extraction/output/: page_000.json  page_001.json  page_002.json  page_003.json  page_004.json  page_005.json  page_006.json  page_007.json  page_008.json  page_009.json  page_010.json  page_011.json  page_012.json  page_013.json  page_014.json  page_015.json  page_016.json  page_017.json  page_018.json  page_019.json  page_020.json  page_021.json  page_022.json  page_023.json  page_024.json  page_025.json  page_026.json  page_027.json  page_028.json  page_029.json  page_030.json  (+40 more)
taxi_duckdb/: conftest.py  homework_wk4.ipynb  judge.py  main.py  patch_agent.py  pyproject.toml  sql_agent.py  sql_tools.py  test_agent.py  utils.py
trivia_quizmaster/: main.py  pyproject.toml  trivia_agent.py  trivia_tools.py  wk5_homework.ipynb
