[project]
name = "agent-experimental-builds"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic[bedrock]>=0.96.0",
    "boto3>=1.42.91",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "python-dotenv>=1.2.2",
]
