[project]
name = "agent-experimental-builds"
version = "0.1.0"
description = "Projects, learning and experiments"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic[bedrock]>=0.96.0",
    "boto3>=1.42.91",
    "gitsource>=0.0.4",
    "ipykernel>=7.2.0",
    "jaxn>=0.0.5",
    "jupyter>=1.1.1",
    "langchain>=1.2.15",
    "markitdown[pdf]>=0.1.5",
    "minsearch>=0.0.10",
    "python-dotenv>=1.2.2",
    "python-frontmatter>=1.1.0",
    "requests>=2.33.1",
    "toyaikit>=0.0.9",
]
