[project]
name = "documentation-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gitsource>=0.0.4",
    "jaxn>=0.0.5",
    "logfire>=4.32.1",
    "minsearch>=0.0.11",
    "openai>=2.36.0",
    "pydantic-ai>=1.91.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.57.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-xdist>=3.8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
