[project]
name = "taxi-duckdb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.5.2",
    "gitsource>=0.0.4",
    "minsearch>=0.0.11",
    "openai>=2.36.0",
    "pydantic>=2.13.4",
    "pydantic-ai>=1.93.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
